# RTK-X

./: CMakeLists.txt  README.md
app/: main.cpp
config/: Kineconfig.ini  config.ini
include/: DataClassSet.h  Matrix.h  RTK.h  ReConfig.h  ReadBinary.h  SPP.h  TimeCordination.h  mathf.h  output.h  param.h  sockets.h
src/: LSQ.cpp  Matrix.cpp  RTK.cpp  RTKscript.cpp  ReConfig.cpp  ReadBinary.cpp  SPP.cpp  SPPscript.cpp  TimeCordination.cpp  basCal.cpp  lambda.cpp  output.cpp  scokets.cpp
